--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@supabase/supabase-js": "^2.39.7",
+		"pixijs": "^7.1.4"
+	}
 }
