--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
-		"moduleResolution": "bundler"
+		"moduleResolution": "Bundler",
+		// "moduleResolution": "nodenext"
+		// "moduleResolution": "node16"
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
