making DASH work with seamless video switching and starting to overlay PIXI for graphics

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 	"dependencies": {
 		"@pixi/sound": "^6.0.0",
 		"@supabase/supabase-js": "^2.39.7",
+		"dashjs": "^4.7.4",
 		"pixi.js": "^8.0.1"
 	}
 }
