--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"dashjs": "^4.7.4",
 		"pixi-filters": "^6.0.2",
 		"pixi.js": "^8.0.1",
+		"pixi.js-legacy": "^7.4.2",
 		"plyr": "^3.7.8",
 		"vidstack": "^1.11.19"
 	}
