Working on Howler integration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.0",
+		"@types/howler": "^2.2.11",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
 		"eslint": "^8.56.0",
@@ -35,6 +36,7 @@
 		"@pixi/sound": "^6.0.0",
 		"@supabase/supabase-js": "^2.39.7",
 		"dashjs": "^4.7.4",
+		"howler": "^2.2.4",
 		"pixi-filters": "^6.0.2",
 		"pixi.js": "^8.0.1",
 		"plyr": "^3.7.8",
