--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
 	"dependencies": {
 		"@pixi/sound": "^6.0.0",
 		"@supabase/supabase-js": "^2.39.7",
+		"@tailwindcss/vite": "^4.0.0",
 		"dashjs": "^4.7.4",
 		"pixi-filters": "^6.0.2",
 		"pixi.js": "^8.0.1",
 		"plyr": "^3.7.8",
+		"tailwindcss": "^4.0.0",
 		"uuid": "^10.0.0",
 		"vidstack": "^1.11.19"
 	}
